--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           >GitHub</a
         >
         and hosted on
-        <a href="https://hot-not-hot.netlify.app/" target="_blank">Netlify</a>
+        <a href="https://my-cute-weatherforecast.netlify.app/" target="_blank">Netlify</a>
       </footer>
     </div>
 
